# scidb_rdma

./: .gitignore  CMakeBuildFlags.cmake  CMakeLists.txt  install.cmake  readme.md  revision  run.py  scidb.spec.in
examples/bestmatch/: BestMatchArray.cpp  BestMatchArray.h  CMakeLists.txt  LogicalBestMatch.cpp  PhysicalBestMatch.cpp  plugin.cpp
examples/example_udos/: CMakeLists.txt  README  plugin.cpp  standalone_makefile
examples/example_udos/HelloInstances/: LogicalHelloInstances.cpp  PhysicalHelloInstances.cpp
examples/example_udos/InstanceStats/: LogicalInstanceStats.cpp  PhysicalInstanceStats.cpp
examples/example_udos/SampleQueries/: load_trades.sh  sample_queries.sh
examples/point/: CMakeLists.txt  functions.h  point.cpp
examples/rational/: CMakeLists.txt  rational.cpp  rational_functions.h
repos/deb/: CMakeLists.txt  postinst.in  repos_ce.sh.in  repos_common.sh.in  repos_devel.sh.in  repos_ee.sh.in
src/: CMakeLists.txt
src/array/: AccumulatorArray.cpp  AllocationBuffer.cpp  Array.cpp  ArrayDesc.cpp  ArrayDescSerialize.cpp  ArrayDistribution.cpp  ArrayIterator.cpp  ArrayName.cpp  ArrayWriter.cpp  AttributeDesc.cpp  Attributes.cpp  CMakeLists.txt  CachedDBChunk.cpp  CachedDBChunk_debug.cpp  CachedTmpChunk.cpp  Chunk.cpp  ChunkBuffer.cpp  ChunkMaterializer.cpp  CompressedBuffer.cpp  ConstArrayIterator.cpp  ConstChunk.cpp  ConstChunkIterator.cpp  ConstItemIterator.cpp  ConstIterator.cpp  Coordinate.cpp  DBArray.cpp  DeepChunkMerger.cpp  DeepChunkMerger.h  DelegateArray.cpp  Dense1MChunkEstimator.cpp  DimensionDesc.cpp  Dimensions.cpp  ListArrayBuilder.cpp  MaterializedChunkCache.cpp  MemArray.cpp  MemChunk.cpp  MergeSortArray.cpp  Metadata.cpp  MultiStreamArray.cpp  ObjectNames.cpp  (+22 more)
src/capi/: CMakeLists.txt  ClientAuthenticator.cpp  ClientAuthenticator.h  Credential.cpp  SciDBRemote.cpp  SciDBRemoteStubs.cpp
src/ccm/: CMakeLists.txt  Ccm.proto  CcmBridge.cpp  CcmBridge.h  CcmConnection.cpp  CcmConnection.h  CcmConversation.cpp  CcmConversation.h  CcmConversationState.cpp  CcmConversationState.h  CcmErrorCode.cpp  CcmErrorCode.h  CcmErrorCodes.inc  CcmMsgHeader.cpp  CcmMsgHeader.h  CcmMsgType.cpp  CcmMsgType.h  CcmMsgTypes.inc  CcmProperties.cpp  CcmService.cpp  CcmSession.cpp  CcmSession.h  CcmSessionCapsule.cpp  CcmSessionCapsule.h  CcmSessionState.cpp  CcmSessionState.h  ClientCommManager.cpp  ClientCommManager.h  SciDBMessage.py  Uuid.cpp  Uuid.h  ccmtest.py
src/dense_linear_algebra/: CMakeLists.txt  DLAErrors.h  DLAErrors.inc  diag.sh  doSvd.sh  doSvdDirect.sh  doSvdDirectCluster.sh  doSvdMetric.sh  doSvdWithMetrics.sh  plugin.cpp  pluginNoSP.cpp
src/dense_linear_algebra/array/: ArrayExtractOp.hpp  OpArray.h
src/dense_linear_algebra/blas/: LogicalBLASFlopsTest.cpp  PhysicalBLASFlopsTest.cpp  initMathLibs.cpp
src/dense_linear_algebra/dlaScaLA/: GEMMLogical.cpp  GEMMOptions.cpp  GEMMOptions.hpp  GEMMPhysical.cpp  SVDLogical.cpp  SVDPhysical.cpp
src/dense_linear_algebra/lapack/: LogicalLAPACKFlopsTest.cpp  PhysicalLAPACKFlopsTest.cpp
src/dense_linear_algebra/test/: dla_driver.py
src/jdbc/: CMakeLists.txt  build.xml
src/linear_algebra/: CMakeLists.txt  LAErrors.h  plugin.cpp
src/mkl/: CMakeLists.txt
src/monitor/: CMakeLists.txt  InstanceStats.cpp  MonitorCommunicator.cpp  MonitorConfig.cpp  QueryStats.cpp
src/mpi/: CMakeLists.txt  MPIInitLogical.cpp  MPIInitPhysical.cpp  MPILauncher.cpp  MPIManager.cpp  MPIPhysical.cpp  MPISlaveProxy.cpp  MPIUtils.cpp  pluginNoMpi.cpp
src/network/: AuthMessageHandleJob.cpp  AuthMessageHandleJob.h  Authenticator.cpp  BaseConnection.cpp  BaseConnection.h  CMakeLists.txt  ClientMessageHandleJob.cpp  ClientMessageHandleJob.h  Connection.cpp  Connection.h  GlobalNew.cpp  InstanceAuthenticator.cpp  InstanceAuthenticator.h  MessageDesc.cpp  MessageDesc.h  MessageHandleJob.cpp  MessageHandleJob.h  MessageUtils.cpp  MessageUtils.h  Network.cpp  NetworkManager.cpp  OrderedBcast.cpp  OrderedBcast.h  Session.cpp  TrustAuthenticator.h  entry.cpp
src/query/: Aggregate.cpp  AggregateChunkMerger.cpp  AggregateUnitTests.h  AggregateUtils.cpp  AutochunkFixer.cpp  AuxUnitTests.h  BuiltInFunctions.h  BuiltInFunctions.inc  BuiltinAggregates.cpp  CMakeLists.txt  CompositeAggregate.cpp  Expression.cpp  ExpressionUnitTests.h  FunctionDescription.cpp  FunctionLibrary.cpp  FunctionLibraryUnitTests.h  LogicalExpression.cpp  LogicalOperator.cpp  LogicalPlan.cpp  LogicalQueryPlan.h  LogicalQueryPlanNode.cpp  Multiquery.cpp  OperatorDist.cpp  OperatorLibrary.cpp  OperatorParam.cpp  OperatorProfiling.cpp  Parser.h  PhysicalBoundaries.cpp  PhysicalOperator.cpp  PhysicalPlan.cpp  PhysicalQueryPlan.h  PhysicalQueryPlanNode.cpp  PhysicalQueryPlanUtilities.cpp  PhysicalUpdate.cpp  PullSGArray.cpp  PullSGArray.h  PullSGArrayUtil.cpp  PullSGArrayUtil.h  PullSGContext.cpp  PullSGContext.h  (+16 more)
src/rbac/: CMakeLists.txt  NamespacesCommunicator.cpp  Rbac.cpp  Rights.cpp
src/storage/: BufferMgr.cpp  BufferMgr_debug.cpp  CMakeLists.txt  IndexMap.cpp  IndexMgr.cpp  PersistentIndexMap.cpp  StorageMgr.cpp  UnitTestStorageEngineLogical.cpp  UnitTestStorageEnginePhysical.cpp
src/system/: Auth.cpp  BlockCyclic.cpp  CMakeLists.txt  Cluster.cpp  Config.cpp  Constants.cpp.in  ErrorsLibrary.cpp  ExceptionUnitTests.h  Exceptions.cpp  Resources.cpp  SciDBConfigOptions.cpp  SciDBConfigOptions.h  Sysinfo.cpp  System.cpp  UserException.cpp  Warnings.cpp
src/util/: Backtrace.cpp  BufferedFileInput.cpp  BufferedFileInput.h  CMakeLists.txt  CoordinatesMapper.cpp  Counter.cpp  CryptoUtils.cpp  CsvParser.cpp  DFA.cpp  DataStore.cpp  Event.cpp  FileIO.cpp  InjectedError.cpp  IoFormats.cpp  Job.cpp  JobQueue.cpp  MultiConstIterators.cpp  PathUtils.cpp  PerfTime.cpp  PerfTimeAggData.cpp  PerfTimeScope.cpp  PluginManager.cpp  PluginManager.h  PluginObjects.cpp  RTLog.cpp  RTLog.h  RtreeOfSpatialRange.cpp  SafebufUnitTests.h  Semaphore.cpp  SpatialType.cpp  StringUtil.cpp  Thread.cpp  ThreadPool.cpp  TsvParser.cpp  UnitTestDataStoreLogical.cpp  UnitTestDataStorePhysical.cpp  UnitTestFileIOLogical.cpp  UnitTestFileIOPhysical.cpp  UnitTestRootArena.cpp  Utility.cpp  (+9 more)
(+840 files in other folders)
